--- a/my-project_browsnv0/package.json
+++ b/my-project_browsnv0/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
