--- a/remotejobsite/package.json
+++ b/remotejobsite/package.json
@@ -14,11 +14,13 @@
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4"
   }
 }
