--- a/remotejobsite/package.json
+++ b/remotejobsite/package.json
@@ -15,6 +15,8 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5",
+    "remark-gfm": "^3.0.1",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
