--- a/remotejobsite/package.json
+++ b/remotejobsite/package.json
@@ -14,7 +14,9 @@
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-markdown": "^8.0.5",
     "remark-gfm": "^3.0.1",
     "zustand": "^4.3.2"
