--- a/remotejobsite/package.json
+++ b/remotejobsite/package.json
@@ -15,6 +15,7 @@
     "@next/font": "13.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "firebase": "^9.16.0",
     "framer-motion": "^8.5.4",
     "next": "13.1.2",
     "react": "18.2.0",
