--- a/mechanical-shop-landing/package.json
+++ b/mechanical-shop-landing/package.json
@@ -24,6 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.2",
+    "rellax": "^1.12.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
